--- a/_config.yml
+++ b/_config.yml
@@ -29,8 +29,8 @@ email: dhananjayk@iiitd.ac.in
 description: >- # this means to ignore newlines until "baseurl:"
   This is my personal/professional webpage
 
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: "/testWebsite" # the subpath of your site, e.g. /blog
+url: "https://dhananjaykimothi.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
